[69799212] Misaligned graphic on sign-up page FIX

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -915,7 +915,7 @@ form.event_form {
       float: left;
       border-right: 2px solid #FFF;
       margin: 10px;
-      padding: 10px;
+      padding: 10px 20px 10px 20px;
     }
   }
   li.twitter a {
